<resources>
    <string name="app_name">Wallie</string>
    <string name="version">1.0.1</string>
    <string name="dummyData">false</string>
    <string name="cuzdanUserConfig">cuzdanUserConfig</string>
    <string name="incomeAdKey">ca-app-pub-4901113114102271/5071800540</string>
    <string name="expenseAdKey">ca-app-pub-4901113114102271/6195280144</string>
    <string name="testDeviceId">31F6CD288033C2FD337EF3ED277D0732</string>
    <string-array name="menuArray">
        <item>Budget</item>
        <item>Savings</item>
        <item>Settings</item>
        <item>About</item>
        <item>Wallie Plus</item>
    </string-array>
    <string-array name="plusMenuArray">
        <item>Budget</item>
        <item>Savings</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="dateArray">
        <item>Day</item>
        <item>Month</item>
    </string-array>
    <string-array name="balanceDateArray">
        <item>Month</item>
        <item>Day</item>
    </string-array>
    <string-array name="incomeCategories">
        <item>Salary</item>
        <item>Rent</item>
        <item>Interest</item>
        <item>Games of Chance</item>
        <item>Loan</item>
        <item>Receivables</item>
        <item>Allowance</item>
        <item>Custom Category</item>
    </string-array>
    <string-array name="SalaryIncome">
        <item>Salary Payment</item>
        <item>Premium Payment</item>
        <item>All</item>
    </string-array>
    <string-array name="RentIncome">
        <item>Rent Payment</item>
        <item>All</item>
    </string-array>
    <string-array name="InterestIncome">
        <item>Bank Interest</item>
        <item>Debt Interest</item>
        <item>All</item>
    </string-array>
    <string-array name="GamesIncome">
        <item>Lottery</item>
        <item>Betting</item>
        <item>Gambling</item>
        <item>Other</item>
        <item>All</item>
    </string-array>
    <string-array name="LoanIncome">
        <item>Bank Loan</item>
        <item>All</item>
    </string-array>
    <string-array name="ReceivablesIncome">
        <item>Receivables Payment</item>
        <item>All</item>
    </string-array>
    <string-array name="AllowanceIncome">
        <item>Allowance Payment</item>
        <item>All</item>
    </string-array>
    <string-array name="expenseTags">
        <item>Personal</item>
        <item>Home</item>
    </string-array>
    <string-array name="Personal">
        <item>Food &amp; Drink</item>
        <item>Smoking &amp; Tobacco</item>
        <item>Shopping</item>
        <item>Health</item>
        <item>Entertainment &amp; Social Activities</item>
        <item>Transportation</item>
        <item>Exchange</item>
        <item>Installments</item>
        <item>Debts</item>
        <item>Custom Category (Personal)</item>
        <item>All</item>
    </string-array>
    <string-array name="Home">
        <item>Rent</item>
        <item>Bills</item>
        <item>Pets</item>
        <item>Groceries &amp; Supplies</item>
        <item>Custom Category (Home)</item>
        <item>All</item>
    </string-array>
    <string-array name="FoodExpensePersonal">
        <item>Alcoholic Drinks</item>
        <item>Food &amp; Non-Alcoholic Drinks</item>
        <item>All</item>
    </string-array>
    <string-array name="SmokingExpensePersonal">
        <item>Cigarettes</item>
        <item>Tobacco</item>
        <item>All</item>
    </string-array>
    <string-array name="ShoppingExpensePersonal">
        <item>Clothing &amp; Shoes</item>
        <item>Electronics</item>
        <item>Others</item>
        <item>All</item>
    </string-array>
    <string-array name="HealthExpensePersonal">
        <item>Hospital Bills</item>
        <item>Medicine</item>
        <item>All</item>
    </string-array>
    <string-array name="EntertainmentExpensePersonal">
        <item>Newspapers, Magazines &amp; Books</item>
        <item>Video Games</item>
        <item>Movies, Theatre &amp; Concerts</item>
        <item>Others</item>
        <item>All</item>
    </string-array>
    <string-array name="TransportationExpensePersonal">
        <item>Bus Pass</item>
        <item>Fuel</item>
        <item>Taxi</item>
        <item>Others</item>
        <item>All</item>
    </string-array>
    <string-array name="ExchangeExpensePersonal">
        <item>Currency Exchange</item>
        <item>All</item>
    </string-array>
    <string-array name="InstallmentsExpensePersonal">
        <item>Installment Payment</item>
        <item>ALl</item>
    </string-array>
    <string-array name="DebtsExpensePersonal">
        <item>Debt Payment</item>
        <item>Bank Interest Debt</item>
        <item>Others</item>
        <item>All</item>
    </string-array>
    <string-array name="RentExpenseHome">
        <item>House Rent</item>
        <item>All</item>
    </string-array>
    <string-array name="BillsExpenseHome">
        <item>Electric</item>
        <item>Water</item>
        <item>Gas</item>
        <item>Phone</item>
        <item>Internet</item>
        <item>Cable</item>
        <item>Others</item>
        <item>All</item>
    </string-array>
    <string-array name="PetsExpenseHome">
        <item>Pet Purchase</item>
        <item>Veterinarian</item>
        <item>Food</item>
        <item>Others</item>
        <item>All</item>
    </string-array>
    <string-array name="GroceriesExpenseHome">
        <item>Cleaning Supplies</item>
        <item>Food &amp; Non-Alcoholic Drinks</item>
        <item>Alcoholic Drinks</item>
        <item>Cigarettes &amp; Tobacco</item>
        <item>Home Appliances</item>
        <item>Furniture</item>
        <item>Others</item>
        <item>All</item>
    </string-array>
    <string-array name="turkishMonths">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="next">Next</string>
    <string name="prev">Back</string>
    <string name="finish_income">Add Income</string>
    <string name="finish_expense">Add Expense</string>
    <string name="finish_saving">Add Savings</string>
    <string name="review">Review</string>
    <string name="label_amount">Amount</string>
    <string name="label_desc">Description</string>
    <string name="hint_desc">Optional</string>
    <string name="label_name">Savings Name</string>
    <string name="label_repeating">Repeat?</string>
    <string name="label_priority">Priority</string>
    <string name="label_custom_day">Days</string>
    <string name="submit_confirm_message">Looking good?</string>
    <string name="submit_confirm_button">Add Income</string>
    <string name="submit_cancel_button">Cancel</string>
    <string name="currency">TL</string>
    <string name="insufficent_funds">Insufficient funds.</string>
</resources>