<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" style="@style/WizardPageContainer">

    <TextView style="@style/WizardPageTitle" android:layout_width="match_parent" android:layout_height="wrap_content"
            />
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"
                android:paddingLeft="16dp" android:paddingRight="16dp" android:scrollbarStyle="outsideOverlay"
            >
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView style="@style/WizardFormLabel" android:text="@string/label_amount"
                      android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <EditText android:id="@+id/saving_amount" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:saveEnabled="false"
                      android:hint="@string/hint_amount" android:layout_marginBottom="16dp"
                      android:inputType="number|numberDecimal"/>
            <TextView style="@style/WizardFormLabel" android:text="@string/label_name"
                      android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <EditText android:id="@+id/saving_name" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:saveEnabled="false"
                      android:inputType="textEmailAddress|textCapSentences"
                      android:lines="4" android:maxLines="4" android:maxLength="100"/>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="50dp"
                            android:layout_marginTop="10dp">
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/chkRepeating"
                        android:layout_centerVertical="true" android:layout_toRightOf="@+id/textView7"
                        android:layout_toEndOf="@+id/textView7" android:layout_marginLeft="10dp"/>
                <TextView style="@style/WizardFormLabel" android:text="@string/label_repeating"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/textView7"
                          android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                          android:layout_alignParentStart="true"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp">
                <TextView style="@style/WizardFormLabel" android:text="@string/label_priority"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/textView11"
                          android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                          android:layout_alignParentStart="true"/>
                <EditText
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/txtPriority" android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/textView11" android:layout_toEndOf="@+id/textView11"
                        android:layout_marginLeft="10dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>